--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -3,13 +3,8 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300);
 @import url(https://fonts.googleapis.com/css?family=Merriweather:300);
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,800);
-@import "reset.scss";
-@import "helpers-functions";
-@import "helpers-variables";
-@import "helpers-mixins";
-@import "typography";
-@import "layout-base";
-@import "modules-aside";
-@import "modules-header";
-@import "modules-social";
-@import "modules-footer";
+//@import "darcula";
+@import "reset";
+@import "helpers";
+@import "variables";
+@import "include";
