--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,10 +1,9 @@
-<nav>
-    <img id="menu" src="/resources/images/menu.svg" alt="menu">
-    <h2>MENU</h2>
+<nav id="main_nav">
     <ul>
-        <li><a href="/index.html">Home</a></li>
-        <li><a href="/_pages/articles.html">Articles</a></li>
-        <li><a href="/_pages/about.html">About</a></li>
+        <li><a class="fancy_nav" href="/index.html">Home</a></li>
+        <li><a class="fancy_nav" href="/categories/portfolio.html">Portfolio</a></li>
+        <li><a class="fancy_nav" href="/categories/blog.html">Blog</a></li>
+        <li><a class="fancy_nav" href="/_pages/about.html">About</a></li>
     </ul>
 </nav>
 
