--- a/resources/css/main.scss
+++ b/resources/css/main.scss
@@ -3,8 +3,12 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300);
 @import url(https://fonts.googleapis.com/css?family=Merriweather:300);
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,800);
-//@import "darcula";
+@import "darcula";
 @import "reset";
 @import "helpers";
 @import "variables";
+@import "default";
 @import "include";
+@import "nav";
+@import "footer";
+@import "media";
