--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -2,7 +2,6 @@
 layout: default
 ---
 
-{% for page in paginator.posts %}
+{% for page in site.categories[page.category] %}
 {% include articles.html %}
 {% endfor %}
-
