--- a/_sass/_helpers.scss
+++ b/_sass/_helpers.scss
@@ -1,4 +1,3 @@
-
 // functions
 @function increase-by-percentage($number, $percentage) {
   @return $number + ($number * $percentage/100);
@@ -8,11 +7,42 @@
   @return $number - ($number * $percentage/100);
 }
 
-
 // mixins
 @mixin center-horizontally($margin-v: 0) {
   display: block;
   margin: $margin-v auto;
+}
+
+@mixin disable-selection() {
+  -webkit-user-select: none; /* Chrome/Safari/Opera */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none;
+}
+@mixin init-nav-hover($position, $color: $color-white) {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 1px;
+
+  @if ($position == "top") {
+    top: 0;
+  } @else if ($position == "bottom") {
+    bottom: 0;
+  }
+
+  left: 0;
+  background-color: $color;
+  transform: scaleX(0);
+  transition: $t-s-L;
+}
+
+
+@mixin init-con-font($color: $color-white) {
+  font-family: $font-family-open-sans-condensed;
+  letter-spacing: $l-s-L;
+  text-transform: uppercase;
+  color: $color;
 }
 
 @mixin flex-center() {
@@ -21,7 +51,7 @@
   justify-content: center;
 }
 
-@mixin box-size($width: auto, $height: auto ){
+@mixin box-size($width: auto) {
   width: $width;
-  height: $height;
+  height: $width;
 }
