--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,10 +3,9 @@
         {% if page.title %}
         {{ page.title }}
         {% else %}
-        Default Page Title
+        {{ site.title }}
         {% endif%}
     </title>
     <meta name="viewport" content="device=device-width, initial-scale=1">
     <link rel="stylesheet" href="/resources/css/main.css">
-    <script src="/resources/js/menu.js"></script>
 </head>
