--- a/_includes/paginator.html
+++ b/_includes/paginator.html
@@ -1,9 +1,11 @@
-<nav id="paginator">
+<nav class="paginator">
     <ul>
         {% if paginator.page %}
         {% if paginator.previous_page %}
         <li><a class="fancy_nav" href="{{ paginator.previous_page_path }}">&lt;&nbsp;&nbsp; Previous</a></li>
         {% endif %}
+        <li class="sep">&nbsp;</li>
+        <li><a class="fancy_nav" href="#">Top</a></li>
         <li class="sep">&nbsp;</li>
         {% if paginator.next_page %}
         <li><a class="fancy_nav" href="{{ paginator.next_page_path }}">Next&nbsp;&nbsp;&gt;</a></li>
@@ -13,6 +15,8 @@
         {% if page.previous.url %}
         <li><a class="fancy_nav" href="{{ page.previous.url }}">&lt;&nbsp;&nbsp; Previous</a></li>
         {% endif %}
+        <li class="sep">&nbsp;</li>
+        <li><a class="fancy_nav" href="#">Top</a></li>
         <li class="sep">&nbsp;</li>
         {% if page.next.url %}
         <li><a class="fancy_nav" href="{{ page.next.url }}">Next&nbsp;&nbsp;&gt;</a></li>
