--- a/_includes/tags.html
+++ b/_includes/tags.html
@@ -1,5 +1,5 @@
 
-<nav id="tags">
+<nav class="tags">
     <ul>
         <li ><img src="/resources/images/tag.svg" alt="tag"></li>
         {% for tag in page.tags %}
