--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <header>
         {% include nav.html %}
     </header>
-    <main>
+    <main id="start">
         {{ content }}
     </main>
     <footer>
@@ -14,5 +14,6 @@
         {% include footer.html %}
     </footer>
 </div>
+<script id="dsq-count-scr" src="//{{ site.disqus }}.disqus.com/count.js" async></script>
 </body>
 </html>
