--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -1,16 +1,18 @@
 
+/*************************************************************************
+                             FOOTER
+/*************************************************************************/
+
 #footer_main {
   @include center-horizontally();
   max-width: $media-query-max;
   padding: $m-p-XL 0;
-  font-size: 120%;
   line-height: 150%;
   text-align: center;
   > section {
     margin: 0;
-    color: $color-grey-grey;
-    padding: $m-p-M;
-    padding-top: 0;
+    color: $color-grey-dark;
+    padding: 0 $m-p-M $m-p-M;
 
     h3 {
       text-transform: lowercase;
@@ -19,16 +21,15 @@
       margin-bottom: $m-p-XS;
     }
   }
-  form {
 
+  form {
     margin-bottom: $m-p-XL;
     input {
-      padding: 0.5rem;
+      padding: $m-p-XXS;
       background-color: $color-grey;
       outline: none;
       border: none;
     }
-
 
     input[type="submit"] {
       background-color: $color-orange;
@@ -36,20 +37,12 @@
       cursor: pointer;
       letter-spacing: $l-s-M;
     }
-    input[type="submit"]:hover {
-      transform: scale(0.95);
-    }
-  }
-
-  .social_nav {
-    margin-bottom: $m-p-XL;
   }
 
   > small {
-    @include init-con-font($color-grey-grey);
+    @include init-con-font($color-grey-dark);
     text-align: center;
     margin-top: auto;
   }
 }
-
 
