--- a/_includes/articles.html
+++ b/_includes/articles.html
@@ -2,7 +2,7 @@
     {% include article_header.html %}
     {{ page.excerpt }}
     <footer>
-        <a class="read_more" href="{{ page.url }}">read more</a>
+        <a class="read_more button" href="{{ page.url }}">read more</a>
         {% include tags.html %}
     </footer>
 </article>
