--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,16 +1,18 @@
 <div id="footer_main">
     <section id="sign_up">
         <h3>Sign up for newsletters</h3>
-        <form action="post">
-            <input type="text" placeholder="Enter email">
-            <input type="submit" value="Sign Up">
+        <!-- Coming soon -->
+        <form action="#">
+        <input type="text" placeholder="Enter email">
+        <input class="button" type="submit" value="Sign Up">
         </form>
     </section>
     <section id="follow">
         <h3>Follow me</h3>
+        <!-- Coming soon -->
         {% include social.html %}
     </section>
     <small>
-        &copy; 2016 DENNIS GRINCH. ALL RIGHTS RESERVED.
+        &copy; 2016 {{ site.owner }}. ALL RIGHTS RESERVED.
     </small>
 </div>
