--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,8 +1,9 @@
 <nav id="social">
-    <ul>
-        <li><a id="facebook" class="social_nav" href="#"><img src="/resources/images/facebook.svg" alt="facebook"></a></li>
-        <li><a id="twitter" class="social_nav" href="#"><img src="/resources/images/twitter.svg" alt="twitter"></a></li>
-        <li><a id="google_plus" class="social_nav" href="#"><img src="/resources/images/google_plus.svg" alt="google plus"></a></li>
-        <li><a id="rss" class="social_nav" href="#"><img src="/resources/images/rss.svg" alt="rss"></a></li>
-    </ul>
+        <ul>
+            {% for soc in site.data.social %}
+            <li><a id="{{ soc.name }}" class="social_nav button" href="#">
+                <img src="{{ soc.image }}" alt="{{ soc.name }}">
+            </a></li>
+            {% endfor %}
+        </ul>
 </nav>
