--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,5 +7,5 @@
         {% endif%}
     </title>
     <meta name="viewport" content="device=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/resources/css/main.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/resources/css/main.css">
 </head>
