--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
 <nav id="main_nav">
     <ul>
-        <li><a class="logo" href="/index.html"><span class="name">{{ site.owner }}</span>blog</a></li>
+        <li><a class="logo" href="{{ site.baseurl }}/index.html"><span class="name">{{ site.owner }}</span>blog</a></li>
         {% for link in site.data.nav %}
         <li><a class="fancy_nav" href="{{ link.link }}">{{ link.name }}</a></li>
         {% endfor %}
