--- a/_includes/social.html
+++ b/_includes/social.html
@@ -2,7 +2,7 @@
         <ul>
             {% for soc in site.data.social %}
             <li><a id="{{ soc.name }}" class="social_nav button" href="#">
-                <img src="{{ soc.image }}" alt="{{ soc.name }}">
+                <img src="{{ site.baseurl }}{{ soc.image }}" alt="{{ soc.name }}">
             </a></li>
             {% endfor %}
         </ul>
