--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,6 @@
         {% include footer.html %}
     </footer>
 </div>
-<script id="dsq-count-scr" src="//{{ site.disqus }}.disqus.com/count.js" async></script>
+<script id="dsq-count-scr" src="//{{ site.baseurl }}{{ site.disqus }}.disqus.com/count.js" async></script>
 </body>
 </html>
