--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -6,7 +6,7 @@
      */
     var disqus_developer = 1;
     var disqus_config = function () {
-        this.page.url = '{{ site.url }}{{ site.baseurl }}{{ page.url }}';
+        this.page.url = '{{ site.url }}{{ page.url }}';
         this.page.identifier = '{{ page.id }}';
         this.page.title = "{{ page.title }}";
     };
