--- a/_includes/articles.html
+++ b/_includes/articles.html
@@ -1,6 +1,6 @@
 <article>
     {% include article_header.html %}
-    {{ post.excerpt }}
+    {{ page.excerpt }}
     <footer>
         <a class="read_more button" href="{{ site.baseurl }}{{ page.url }}">read more</a>
         {% include tags.html %}
