--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,4 +8,7 @@
     </title>
     <meta name="viewport" content="device=device-width, initial-scale=1">
     <link rel="stylesheet" href="{{ site.baseurl }}/resources/css/main.css">
+    {% if jekyll.environment == 'production' %}
+    {% include analytics.html %}
+    {% endif %}
 </head>
